# pledgeguard

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  SUPPORT.md  TUTORIAL.md  action.yml  deny.toml  gitlab-ci.yml  scan_results.json
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  pledgeguard.yml  release.yml
crates/pledgeguard-cli/: Cargo.toml
crates/pledgeguard-cli/src/: main.rs  mcp.rs
crates/pledgeguard-cli/tests/: integration.rs
crates/pledgeguard-core/: Cargo.toml
crates/pledgeguard-core/fuzz/: Cargo.toml
crates/pledgeguard-core/fuzz/fuzz_targets/: scan_bytes.rs  scan_line.rs
crates/pledgeguard-core/src/: ai.rs  ai_hooks.rs  api_scan.rs  archive.rs  ast.rs  ast_comments.rs  baseline.rs  bpe.rs  ci_cd.rs  cloud_scan.rs  composite.rs  config.rs  content_decode.rs  context.rs  csv.rs  decode.rs  detector.rs  detectors.rs  docker.rs  enterprise.rs  entropy.rs  expr_filter.rs  extensibility.rs  file_scan.rs  finding.rs  fp_filters.rs  git_history.rs  github_actions.rs  iac_detection.rs  junit.rs  lib.rs  offline.rs  output_formats.rs  performance.rs  plugin.rs  redact.rs  sarif.rs  scanner.rs  source_scan.rs  source_scan2.rs  (+3 more)
crates/pledgeguard-core/tests/: golden_file_tests.rs  property_tests.rs  snapshot_tests.rs
docs/: API-STABILITY.md  BENCHMARK-ACCURACY.md  BENCHMARK.md  MIGRATION-GITLEAKS.md  MIGRATION-TRUFFLEHOG.md  PROJECT.md  PROVIDERS-FUTURE.md  RELEASE.md  ROADMAPLEAD.md  SECURITY.md  SUPPORT.md  github-action-example.yml
examples/plugins/example-plugin/: Cargo.toml  README.md
examples/plugins/example-plugin/src/: lib.rs
homebrew/: pledgeguard.rb
npm/: .npmignore  README.md  generate-platform-packages.js  install.js  package.json  pledgeguard.js
scoop/: pledgeguard.json
templates/: Jenkinsfile  azure-pipelines.yml  bitbucket-pipelines.yml  circleci-orb.yml  drone.yml  husky-pre-commit  lint-staged.json  teamcity.config
vscode-extension/: extension.js  package.json
