[workspace]
resolver = "2"
members = [
    "crates/pledgeguard-core",
    "crates/pledgeguard-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["PledgeLabs"]
repository = "https://github.com/pledgeandgrow/pledgeguard"
description = "Rust-native secret scanner — regex + entropy detection, CI gate, WASM plugins"
keywords = ["security", "secrets", "scanner", "ci", "sast"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/pledgeandgrow/pledgeguard"

[workspace.dependencies]
# Regex + text scanning
regex = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Parallelism
rayon = "1"

# Filesystem walking (respects .gitignore)
ignore = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM plugin runtime
wasmtime = "26"

# HTTP client for live provider verification (sync, no async runtime needed)
ureq = { version = "2", features = ["json"] }

# JS/TS AST parser for false-positive refinement
oxc_allocator = "0.140"
oxc_parser = "0.140"
oxc_span = "0.140"

# Performance: multi-pattern prefilter
aho-corasick = "1"
memchr = "2"

# Performance: concurrent collections
dashmap = "6"

# Performance: byte-oriented strings (no UTF-8 validation overhead)
bstr = "1"

# Performance: stack-allocated small vectors
smallvec = { version = "1", features = ["write"] }

# Custom config file parsing
toml = "0.8"

# Internal crates
pledgeguard-core = { path = "crates/pledgeguard-core", version = "0.1.0" }

# Performance: global allocator (Linux/macOS only — Windows uses system allocator)
tikv-jemallocator = "0.5"

# Performance: parallelism
crossbeam = "0.8"

# Profiling (optional)
pprof = { version = "0.14", features = ["protobuf-codec", "flamegraph"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
