[workspace]
resolver = "2"
members = [
    "crates/pledgeguard-core",
    "crates/pledgeguard-cli",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["PledgeLabs"]
repository = "https://github.com/pledgeandgrow/pledgeguard"
description = "Rust-native secret scanner — regex + entropy detection, CI gate, WASM plugins"
keywords = ["security", "secrets", "scanner", "ci", "sast"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/pledgeandgrow/pledgeguard"

[workspace.dependencies]
# Regex + text scanning (SIMD-accelerated via perf features)
regex = { version = "1", features = ["perf", "perf-cache", "perf-dfa", "perf-inline", "perf-literal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Parallelism
rayon = "1"

# Filesystem walking (respects .gitignore)
ignore = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM plugin runtime
wasmtime = "26"

# HTTP client for live provider verification (sync, no async runtime needed)
ureq = { version = "2", features = ["json"] }

# JS/TS AST parser for false-positive refinement
oxc_allocator = "0.140"
oxc_parser = "0.140"
oxc_span = "0.140"

# Performance: multi-pattern prefilter
aho-corasick = "1"
memchr = "2"

# Performance: concurrent collections
dashmap = "6"

# Performance: byte-oriented strings (no UTF-8 validation overhead)
bstr = "1"

# Performance: memory-mapped file scanning
memmap2 = "0.9"

# Performance: fast hashing for incremental scan cache
blake3 = "1"

# Performance: progress reporting
indicatif = "0.17"

# Performance: stack-allocated small vectors
smallvec = { version = "1", features = ["write"] }

# Custom config file parsing
toml = "0.8"

# Glob pattern matching for --ignore-path
glob = "0.3"

# Base64 decoding for recursive decode scanning
base64 = "0.22"

# Archive scanning
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"

# SHA-256 for AWS SigV4 signing
sha2 = "0.10"

# HMAC-SHA256 for AWS SigV4 signing
hmac = "0.12"

# Internal crates
pledgeguard-core = { path = "crates/pledgeguard-core", version = "0.1.0" }

# Performance: global allocator (Linux/macOS only — Windows uses system allocator)
tikv-jemallocator = "0.5"

# Performance: parallelism
crossbeam = "0.8"

# Profiling (optional)
pprof = { version = "0.14", features = ["protobuf-codec", "flamegraph"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

# Goal 316: Profile-guided optimization (PGO) profile.
# Usage: cargo build --profile pgo --features profile
# 1. Run the binary with PGO instrumentation to collect profile data.
# 2. Rebuild with the collected profile data.
[profile.pgo]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = false  # Keep debug info for PGO instrumentation

# Goal 318: Static linking with musl for Linux.
# Usage: cargo build --profile static --target x86_64-unknown-linux-musl
[profile.static]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"  # Required for fully static linking

# Goal 320: UPX-compressed profile for minimal binary size.
# After building, run: upx --best --lzma target/release/pledgeguard
[profile.upx]
inherits = "release"
opt-level = "z"  # Optimize for size
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
