[package]
name = "pledgeguard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for PledgeGuard — Rust-native secret scanner"
keywords = ["security", "secrets", "scanner", "ci", "sast"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "pledgeguard"
path = "src/main.rs"

[dependencies]
pledgeguard-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
crossbeam = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = { workspace = true }

[features]
default = []
profile = ["pprof"]
pprof = ["dep:pprof"]

[target.'cfg(not(target_os = "windows"))'.dependencies.pprof]
workspace = true
optional = true

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
