[package]
name = "pledgeguard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Detection engine for PledgeGuard — regex + entropy secret detectors"
keywords = ["security", "secrets", "scanner", "sast"]
categories = ["development-tools", "development-tools::testing"]
readme = "../../README.md"

[dependencies]
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
wasmtime = { workspace = true }
ureq = { workspace = true }
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
aho-corasick = { workspace = true }
memchr = { workspace = true }
dashmap = { workspace = true }
bstr = { workspace = true }
smallvec = { workspace = true }
crossbeam = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }
base64 = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }

[dev-dependencies]
tempfile = "3"
